@@ -1,3 +1,10 @@
+2015-09-29  Mark Wielaard  <mjw@redhat.com>
+
+	* elfshphehdr.c: New test.
+	* Makefile.am (check_PROGRAMS): Add elfshphehdr.
+	(TESTS): Likewise.
+	(elfshphehdr_LDADD): New variable.
+
 2015-09-08  Mark Wielaard  <mjw@redhat.com>
 
 	* dwfl-proc-attach.c: New test.
